@@ -3,6 +3,9 @@ TODO:
 	Maybe add an onpaste handler to filter pasted text (would be good for BBCode)
 	Add XHTML output support
 	Better theme support and switching
+	Add ability to resize images in browsers that don't have native WYSIWYG resize
+	Add ability to modify tables in browsers that don't have native WYSIWYG table editing
+	Make FF insert new paragraphs instead of newlines
 
 Version 1.3.0:
 
